SERVER-14315 Support MinKey and MaxKey extended JSON objects in JSON parser