src/mongo/dbtests/jsontests.cpp
@@ -2628,6 +2628,40 @@ namespace JsonTests {
             }
         };
 
+        class MinKeyAlone : public Bad {
+            virtual string json() const {
+                return "{ \"$minKey\" : 1 }";
+            }
+        };
+
+        class MaxKeyAlone : public Bad {
+            virtual string json() const {
+                return "{ \"$maxKey\" : 1 }";
+            }
+        };
+
+        class MinKey : public Base {
+            virtual BSONObj bson() const {
+                BSONObjBuilder b;
+                b.appendMinKey("a");
+                return b.obj();
+            }
+            virtual string json() const {
+                return "{ \"a\" : { \"$minKey\" : 1 } }";
+            }
+        };
+
+        class MaxKey : public Base {
+            virtual BSONObj bson() const {
+                BSONObjBuilder b;
+                b.appendMaxKey("a");
+                return b.obj();
+            }
+            virtual string json() const {
+                return "{ \"a\" : { \"$maxKey\" : 1 } }";
+            }
+        };
+
     } // namespace FromJsonTests
 
     class All : public Suite {
@@ -2889,6 +2923,8 @@ namespace JsonTests {
             add< FromJsonTests::EmbeddedDatesFormat3 >();
             add< FromJsonTests::NullString >();
             add< FromJsonTests::NullFieldUnquoted >();
+            add< FromJsonTests::MinKey >();
+            add< FromJsonTests::MaxKey >();
         }
     } myall;
 
